@@ -1,5 +1,14 @@
 2017-07-26  James Greenhalgh  <james.greenhalgh@arm.com>
 
+	* config/aarch64/aarch64.c (cortexa57_addrcost_table): Remove.
+	(qdf24xx_addrcost_table): Likewise.
+	(cortexa57_tunings): Update to use generic_branch_cost.
+	(cortexa72_tunings): Likewise.
+	(cortexa73_tunings): Likewise.
+	(qdf24xx_tunings): Likewise.
+
+2017-07-26  James Greenhalgh  <james.greenhalgh@arm.com>
+
 	* config/aarch64/aarch64.c (cortexa57_branch_cost): Remove.
 	(thunderx2t99_branch_cost): Likewise.
 	(cortexa35_tunings): Update to use generic_branch_cost.
